# marta-api-app

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker.yml
itsmarta_api/: __init__.py  app.py  config.py  schedules.py  settings.py
itsmarta_api/marta/real_time/: __init__.py  exceptions.py  vehicles.py
itsmarta_api/marta/realtime/: __init__.py  client.py  models.py
itsmarta_api/middleware/: context.py  request_context.py
itsmarta_api/pages/: index.html  schedule.html
itsmarta_api/routes/: htmx.py
itsmarta_api/routes/htmx_routes/: __init__.py
itsmarta_api/services/: arrivals_poller.py  bus_incidents.py  bus_positions_poller.py  bus_snapshots.py  rail_schedules.py  reliability.py
itsmarta_api/static/css/: app.css
itsmarta_api/static/js/: app.js
itsmarta_api/templates/: base.html  base.html.j2
itsmarta_api/templates/arrivals/: index.html  index.html.j2
itsmarta_api/templates/arrivals/components/: stations.html  stations.html.j2
itsmarta_api/templates/buses/: index.html  index.html.j2
itsmarta_api/templates/reliability/: index.html.j2
itsmarta_api/templates/reliability/components/: scoreboard.html.j2
itsmarta_api/templates/schedules/: index.html  index.html.j2
itsmarta_api/templates/schedules/components/: schedule.html  schedule.html.j2
