[tool.poetry]
name = "itsmarta-api"
version = "0.1.0"
description = ""
authors = ["Connor Swislow <52296992+ConnorSwis@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.13"
bs4 = "^0.0.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
pandas = "^2.2.3"
httpx = "^0.28.1"
fastapi = "^0.115.6"
jinja2 = "^3.1.5"
uvicorn = "^0.34.0"
requests-cache = "^1.2.1"
gtfs-realtime-bindings = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "itsmarta_api:main"
